--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>untoldcoding</title>
+    <title>love letter</title>
     <link rel="stylesheet" href="Style3.css" />
   </head>
   <body>
@@ -25,7 +25,7 @@
       <div class="top"></div>
       <div class="shadow"></div>
       <div class="text1">
-        <h2>Hey! Listen I Have Something For You</h2>
+        <h2>Hey, I Have Something For You</h2>
       </div>
     </div>
   </body>
