--- a/new.html
+++ b/new.html
@@ -3,21 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>untoldcoding</title>
+    <title>love letter</title>
     <link rel="stylesheet" href="news.css" />
   </head>
   <body>
     <section class="animation-box">
-      <div class="first-text">When I'm with you, everything feels right.</div>
+      <div class="first-text">Every moment with you is an unforgettable miracle.</div>
       <div class="second-text">
-        My favorite part of every day is the time I get to spend with you.
+        You're the most beautiful thing that I've ever seen.
       </div>
-      <div class="third-text">I love seeing you blush.</div>
+      <div class="third-text">I love seeing you blush, Gresciella.</div>
       <div class="fourth-text">
-        Now that I've found you, I'm never going to let you go
+        Your beauty is undeniable.
       </div>
       <div class="fifth-text">
-        Whenever I count my blessings, you are at the top of my list.
+        The happiness you give makes my life colorful.
       </div>
     </section>
   </body>
